HEAD
	+ Added debug options to stub (commented)
4.1.4
	+ Configuration for openchange notifications with dovecot plugin
	+ Delete obsolete cron file when upgrading from 4.0
4.1.3
	+ Remove deprecated bridged mode condition
4.1.2
	+ Add integration with zentyal-antivirus
4.1.1
	+ Remove wrong Synchronization broken link in the menu
4.1
	+ Remove deprecated OpenChange notifications settings in smb.conf
	+ Disable administrator account expiration on provision
	+ Remove no longer supported cloud synchronization
	+ Remove no longer used External AD mode
	+ Remove the limited GPO support from the Zentyal UI
	+ Remove no longer supported antivirus integration
	+ Added support for quotas on extra FS
4.0.8
	+ Create roaming profile directory correctly when the
	  samAccountName has any space
4.0.7
	+ Added config keys to enable samba to listen only on internal
	  interfaces
	+ Better error when editing user with empty first or last name
	+ Allow restore backup when samba is not provisioned
	+ Set roaming profile for new users
4.0.6
	+ Remove deprecated sids-to-hide file and associated methods
	+ Fixed sort order of EBox::Samba::users method
	+ Adapted migration code from 3.2 to 4.0
	+ Added waitForLDAPObject to EBox::Module::LDAP
	+ Allow to manage Schema Admins group
	+ Add 'drs:max object sync' parameter to avoid replication error
	  after loading schemas
	+ Override smbd and nmbd daemons when migrating from 3.2
	+ Increased default max log size to 100 MB
	+ Backup and restore module's kerberos service password file
4.0.5
	+ Calling correctly to removeGroupShare from the CGI
	+ Fixed external AD keytab generation
	+ Enforce kerberos configuration in external AD mode
	+ Fixed typo in EBox::LDAP::ExternalAD::externalServicesPrincipals
	+ Added disable_uid_sync conf key to save resources when RSAT
	  or ADC mode is not used
	+ Migrate mailboxes when upgrading from Zentyal 3.2
4.0.4
	+ SysvolSync daemon now synchronize deleted GPOs.